syntax = "proto3";
option go_package = "github.com/tdex-network/tdex-daemon/api-spec/protobuf/gen/wallet";

/**
 * Service for Liquidity Providers to manage funds via wallet RPC
 */
service Wallet {
  /*
  WalletAddress returns a Liquid confidential p2wpkh address (BLECH32)
  */
  rpc WalletAddress(WalletAddressRequest) returns (WalletAddressReply);

  /*
  WalletBalance returns total unspent outputs (confirmed and unconfirmed), all
  confirmed unspent outputs and all unconfirmed unspent outputs under control
  of the wallet.
  */
  rpc WalletBalance(WalletBalanceRequest) returns (WalletBalanceReply);

  /*SendToMany sends funds to many outputs */
  rpc SendToMany(SendToManyRequest) returns (SendToManyReply);
}

message SendToManyRequest {
  /*
  A slice of the outputs that should be created in the transaction produced.
  */
  repeated TxOut outputs = 1;
  /*
   The number of millisatoshis per byte that should be used when crafting
   this transaction.
   */
  int64 millisat_per_byte = 2;

  // Optional: if true the transaction will be pushed to the network
  bool push = 3;
}

message SendToManyReply {
  /*
    The serialized transaction sent out on the network.
    */
  bytes raw_tx = 1;
  /*
    The id of the broadcasted transaction.
  */
  bytes txid = 2;
}

message WalletAddressRequest {}
message WalletAddressReply {
  // The confidential address encoded using a blech32 format.
  string address = 1;
  // The blinding private key for the given address encoded in hex format
  string blinding = 2;
}

message BalanceInfo {
  // The balance of the wallet
  uint64 total_balance = 1;

  // The confirmed balance of a wallet(with >= 1 confirmations)
  uint64 confirmed_balance = 2;

  // The unconfirmed balance of a wallet(with 0 confirmations)
  uint64 unconfirmed_balance = 3;
}

message WalletBalanceRequest {}
message WalletBalanceReply {
  // The balance info (total, confirmed, unconfirmed) of the wallet grouped by
  // asset
  map<string, BalanceInfo> balance = 1;
}

message TxOut {
  // The asset being spent
  string asset = 1;
  // The value of the output being spent.
  int64 value = 2;
  // The confidential address of the output being spent.
  string address = 3;
}
